;;;; -*- coding: utf-8; fill-column: 78 -*-
changes relative to sbcl-1.1.6
  * bug fix: :allocation slot option works for condition slots
    (lp#1049404)
  * bug fix: redefining conditions does not lead to multiple evaluations of
    hairy slot initfunctions anymore (lp#1164969)
  * bug fix: CLASS-DIRECT-DEFAULT-INITARGS now works for condition classes
    (lp#1164970)
  * bug fix: function constants now work as initforms and default initarg
    values of conditions (lp#539517)
  * bug fix: svref/(setf svref) on symbol macros don't crash the compiler
    anymore. (Minimal test case provided by James M. Lawrence on sbcl-devel)
  * bug fix: no more bogus ## references when pretty printing backquoted
    forms with non-trivial structure sharing. (lp#1161218)
  * bug fix: Don't signal an error on (setf (documentation nil 'function) "doc").
    Signal a style-warning instead when trying to set documentation of NIL
    for all other documentation types.
    Reported by Zach Beane. Regression since 2e52fa05.
  * LOGBITP and LOGTEST optimizations from x86 ported to x86_64.

changes in sbcl-1.1.6 relative to sbcl-1.1.5:
  * enhancement: the continuable error when defknown-ing over extant
    fndb entries can be ignored by passing :overwrite-fndb-silently t
    as a keyword argument to sb-c:defknown (after attributes). Useful
    to allow defknown to be re-loaded. Use with :allow-other-keys t
    for backward compatibility.
  * optimization: compiler is much faster in compiling SVREF and (SETF SVREF)
    forms.
  * bug fix: Prevent a make-array transform from modifying source forms
    causing problems for inlined code. Thanks to Bart Botta.
    (regression since 1.0.42.11-bis)
  * bug fix: clear-output calls the correct gray stream routine,
    sb-gray:stream-clear-output. (lp#1153257)
  * bug fix: an error is signalled for an invalid format modifier: ~<~@>.
    (lp#1153148)
  * bug fix: Better error messages for package operations (lp#1154776)